# huyaoyu.github.io

./: .gitignore  CNAME  CSS Zen Garden  The Beauty of CSS Design.htm  Commands.txt  Gemfile  Gemfile_backup_20171216  ToDoList.txt  UsefulResources.txt  _config.yml  about.md  blog.html  default_css.css  gallery.html  huyaoyu.css  huyaoyu.html  index.html  index_original.html  project_exp.html  project_exp_phd_thesis.html  projects.html  publications.html  publications.md  self_meta_data.md  test_pdf.html  tigerockfish.css
BundleInstallMessages/: 20190908.txt
JS/: equations.js
LearnJekyll/: LearnJekyll.txt  Markdown syntax.md
OriginalMagicPage/: 213.css  title2.psd
Resources/Posts/PETSc-Eclipse-CMake/: CMakeLists.txt
_data/: common_data.json
_includes/: analytics.html  header.html
_layouts/: home.html
_my_collection/gallery/: ni-pxi.markdown  (+17 more)
_posts/: 2013-12-01-some-answers-to-the-problems-listed-in-the-book-turbulent-flows.markdown  2014-01-01-MATLAB-implement-FFT-and-digital-filter.markdown  2014-01-01-apply-velocity-boundary-condition-UDF.markdown  2014-01-02-MATLAB-plot-dynamic-trajectory.markdown  2016-08-01-PETSC-edit-and-compile-code-with-IDE-eclipse-and-CMake-on-linux.markdown  2016-08-02-PETSC-vector-scattering-and-gathering.markdown  2016-09-01-finite-volume-method-with-coordinate-transformation.markdown  2016-11-01-MATLAB-generate-contour-image-from-CFD-results.markdown  2017-01-01-rotordynamic-analysis-using-ANSYS-Workbench.markdown  2017-01-02-rotordynamic-analysis-using-ANSYS-APDL.markdown  2017-01-30-welcome-to-jekyll.markdown  2017-03-10-about-jekyll.markdown  2017-03-13-some-answers-to-the-problems-listed-in-the-book-turbulent-flows.markdown  2017-04-17-literature-management.markdown  2017-05-03-cpp-coding-unit-test-with-googletest.markdown  2017-07-11-fully-connected-artificial-neural-network.markdown  2017-08-31-solution-codes-for-project-euler.markdown  2017-11-15-the-convolution-neural-network-with-PyTorch.markdown  2017-11-17-unpack-a-ROS-bag-file.markdown  2017-11-26-a-glacne-at-the-data-and-time-functionalities-0f-python.markdown  2017-12-13-bubble-detection-by-using-opencv.markdown  2017-12-15-OpenFOAM-autoPtr-and-tmp-smart-pointers.markdown  2017-12-20-User-manual-of-LidarSafeGuard.markdown  2018-03-27-structural-analysis-with-ANSYS-Workbench-and-assembled-meshes-generated-by-ICEM-CFD-and-Mesh-component.markdown  2018-06-22-convert-results-from-ros-camera_calibration-into-format-used-by-opencv.markdown  2018-07-13-building-mesh-and-texture-in-meshlab-using-point-cloud-produced-by-stereo-reconstruction.markdown  2018-08-05-simple-optical-flow-based-on-depth-and-pose-information.markdown  2018-08-06-image-point-cloud-alignment-based-on-depth-information.markdown  2018-08-26-multimaster-ros-configuration-and-multimaster-fkie.markdown  2019-05-09-GridMap-A-simple-2D-continuous-maze-environment-for-reinforcement-learning-training.markdown  2019-09-08-Deep-assisted-high-resolution-binocular-stereo-reconstruction.markdown  2020-05-03-tartan-air.markdown  2020-07-08-plane-in-pixel-disparity-space.markdown  2020-10-07-cgal-point-cloud-and-mesh.markdown  2021-03-05-orstereo.markdown  2021-04-29-modify-airsim.markdown  2021-05-31-nearest-neighbor-interpolation-airsim.markdown
_sass/: alt-sass.scss
assets/: main.scss
(+24 files in other folders)
